--- a/School.css
+++ b/School.css
@@ -30,6 +30,7 @@ nav img{
     display: inline-block;
     padding: 8px, 12px;
     position: relative;
+    margin-left: auto;
 }
 .nav-links ul li a{
     color: white;
@@ -247,4 +248,92 @@ border-radius: 10px;
 }
 .fa-heart-o{
     color: #f44336;
+}
+
+.sub-header {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(classroom.jpg);
+background-position: center;
+background-size: cover;
+text-align: center;
+color: white;
+}
+.sub-header h1{
+    margin-top: 80px;
+}
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.about-col{
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+.about-col img{
+    width: 100%;
+}
+.about-col h1{
+    padding-top: 0;
+}
+.about-col p{
+    padding: 15px 0 25px;
+}
+.red-btn{
+    border: 1px solid red;
+    background: transparent;
+    color: #f44336;
+}
+.red-btn:hover{
+    color: white;
+}
+
+/* ----------contact us page---------- */
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+.location i frame{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+    
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+    flex-direction: column;
+}
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.contact-col div .fa{
+    font-size: 28px;
+    color: #f44336;
+    margin: 10px;
+    margin-right: 30px;
+
+}
+.contact-col div p{
+    padding: 0;
+}
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+.contact-col input ,.contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
 }
