--- a/School.css
+++ b/School.css
@@ -30,7 +30,9 @@ nav img{
     display: inline-block;
     padding: 8px, 12px;
     position: relative;
-    margin-left: auto;
+    
+    margin-left: 20px;
+   text-decoration: solid;
 }
 .nav-links ul li a{
     color: white;
